log

Thu Mar 10 21:46:59 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7c40e3
Thu Mar 10 21:48:32 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dae682e
Thu Mar 10 21:52:07 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c518cfc
Thu Mar 10 21:53:34 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e827bc9
Thu Mar 10 21:57:36 HSP 2022: 
 exercises.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3b3154f
Thu Mar 10 22:04:52 HSP 2022: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
17cc006
Fri Mar 11 16:34:13 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
79130ab
Fri Mar 11 16:37:56 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
31e1735
Fri Mar 11 16:42:03 HSP 2022: 
 exercises.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaV':
exercises.c:128:13: error: invalid operands to binary + (have 'Vector *' and 'Vector *')
  128 |    (*c) = a + b;
      |             ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee1e0e9
Fri Mar 11 16:43:16 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'sumaV':
exercises.c:128:13: error: invalid operands to binary + (have 'Vector *' and 'Vector *')
  128 |    (*c) = a + b;
      |             ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ae0feca
